--- a/woodstonehtml/about.html
+++ b/woodstonehtml/about.html
@@ -82,7 +82,7 @@
               </li>
               <li class="nav-item">
                 <a class="nav-link text-white me-4 v" href="./contact.html"
-                  >Contact</a
+                  >CONTACT US</a
                 >
               </li>
             </ul>
