--- a/woodstonehtml/contact.html
+++ b/woodstonehtml/contact.html
@@ -245,7 +245,7 @@
               /></a>
             </h6>
           </div>
-          <h6>© 2023 Woodstone. All rights reserved.</h6>
+          <h6>© 2023 Wstone. All rights reserved.</h6>
         </div>
       </div>
     </footer>
